# Langchain

./: pyproject.toml
CH-1/: 1_Basics.ipynb  1_LLM_Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
CH-2/: 1_first_chain.ipynb  2_chain_with_customeRunnable.ipynb  3_Parallel_chain.ipynb  4_conditional_chain.ipynb
CH-3/: 1_ReAct_Agent_Intro.ipynb  2_ReAct_DB_Agent.ipynb  demo.py  init_db.py
SalesDB/: sales.db
