[project]
name = "Langchain_Tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=1.2.24",
    "langchain-openai>=1.1.12",
    "load-dotenv>=0.1.0",
    "openai>=2.30.0",
    "wikipedia>=1.4.0",
]
